--- a/build.gradle
+++ b/build.gradle
@@ -13,3 +13,11 @@ repositories {
 dependencies {
     testImplementation     'junit:junit:4.13'
 }
+
+jar {
+    manifest {
+        attributes(
+            'Main-Class': 'com.jazielloureiro.minesweeper.Main'
+        )
+    }
+}
